gcc/testsuite/gfortran.dg/c-interop/pr103287-1.f90
! { dg-do compile }

subroutine g
   call s([1])
end
subroutine h(x)
   integer, pointer :: x(..)
   call s(x) ! { dg-error "Assumed-rank argument requires an explicit interface" } 
end
